# v2g-IRL

./: .gitignore  EV Charging Data Generation Model - 1 Step Decision Process - Discretised Action Space - with Price and Piecewise Energy Utility v3.ipynb  README.md  claude.md  instructions.md  pyproject.toml  requirements.txt
data/: dictionary.csv  processed_trajectories_continuous.json  processed_trajectories_simple.json  processed_trajectories_simple_probabilistic.json
demo/: app.py
demo/assets/: style.css
demo/core/: config.py  data_loader.py  model_loader.py  trajectory_runner.py
docs/: DeepMaxEnt_discrete_reference.md
models/MaxEntIRL_continuous_PPO_exp1/: monitor.csv
scripts/: MaxEntIRL_continuous.py  MaxEntIRL_simple.py  _debug_actions.py  _debug_monitor.py  analyze_reward_net_discrete.py  compare_reward_nets_segments.py  data_analysis.py  env_test.py  env_test_eval.py  env_test_eval_PPO.py  env_test_eval_SAC.py  env_test_train.py  env_test_train_PPO.py  env_test_train_SAC.py  eval_all_continuous.py  eval_all_discrete.py  eval_continuous.py  eval_deep_discrete.py  eval_deep_profit.py  eval_discrete.py  eval_simple.py  monitor_analysis_ppo.py  monitor_analysis_ppo2.py  profile_ppo_training.py  train_DeepMaxEnt_discrete.py  train_DeepMaxEnt_profit.py  train_MaxEnt_continuous.py  train_MaxEnt_discrete.py  train_MaxEnt_profit.py  train_MaxEnt_simple.py
src/: data_loader.py
synthetic_data_generation_model/: EV Charging Synthetic Dataset - Data Dictionary.xlsx  EV_Charging_Synthetic_Data_Generation_Model.ipynb  NTS_Sampled_500_Individuals_Weekdays_All_Segments_Final.csv  README.md
(+536 files in other folders)
