[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "irl"
version = "0.1.0"
description = "Inverse Reinforcement Learning for V2G project"
readme = "README.md"
requires-python = "==3.11.14"

authors = [
  { name = "Johnny Xiao Hong Yu", email = "jhx21@ic.ac.uk" }
]

dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "gymnasium",
  "torch",
  "stable-baselines3==2.7.1",
  "imitation",
  "openpyxl",
  "sbx-rl==0.23.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
